--- a/src/components/Idea.scss
+++ b/src/components/Idea.scss
@@ -13,6 +13,7 @@ $border-color: lightgrey;
   border: 1px solid $border-color;
   border-bottom: 5px solid var(--accent);
   color: var(--accent);
+  overflow-y: scroll;
 
   &:hover {
     box-shadow: 0 1px 20px -3px rgba($black, .3);
